atualização 1.0 (iniciando responsividade)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header__style">
-            <img src="./img/pt 1.svg" alt="">
+            <img class="header__style__logoPt" src="./img/pt 1.svg" alt="">
             <nav class="header__style__menu">
                 <a class="header__style__menu__itens" href="">Home</a>
                 <a class="header__style__menu__itens" href="">Sobre Mim</a>
