--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <a class="headerConteiner__menu__itens" href="">Principais Trabalhos</a>
             <a class="headerConteiner__menu__ladding" href="">Porque votar em mim?</a>
         </nav>
-        <img class="cabecalho__logoPt" src="./img/pt 1.svg" alt="">
+        <img class="cabecalho__logoPt" src="./img/logo lula 1.png" alt="">
+        <img class="headerConteiner__mensagens" src="./img/aplicativo-de-caixa-de-entrada-de-correio.png" alt="">
     </header>
     <main class="mainConteiner">
         <section class="mainConteiner__section1">
