1° etapa section 1 concluida

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
         <img class="cabecalho__logoPt" src="./img/logo lula 1.png" alt="">
         <img class="headerConteiner__mensagens" src="./img/aplicativo-de-caixa-de-entrada-de-correio.png" alt="">
     </header>
-    <main class="mainConteiner">
-        <section class="mainConteiner__section1">
-            <div class="mainConteiner__section1__imagemFundo">
-                <img src="./img/lula_solo_fundo.png" alt="Imagem de fundo - Lula com seus apoiadores">
+    <main class="main">
+        <section class="main__section1">
+            <div class="main__section1__descricao">
+                <h3 class="main__section1__descricao__titulo">Luiz Inacio Lula da Silva</h3>
+                <h1 class="main__section1__descricao__subtitulo">Unindo o Brasil com coragem, justiça e esperança.</h1>
+                <p class="main__section1__descricao__paragrafo">Liderando com coragem e paixão, dedicando-me à justiça social e ao progresso de todos os brasileiros. Uma trajetória de luta e esperança para inspirar uma nova geração.</p>
+                <a class="main__section1__descricao__button" href="">SAIBA MAIS</a>
             </div>
-            <div class="mainConteiner__section1__descricao">
-                <h1 class="mainConteiner__section1__descricao__titulo">O Presidente Que Brasil Precisa!</h1>
-                    <p class="mainConteiner__section1__descricao__paragrafo">Liderança, Resiliência e Transformação. Sou <b>Luiz Inácio Lula da Silva</b>, e minha jornada é a prova de que, com coragem e determinação, podemos mudar o destino de uma nação. De uma infância humilde ao comando do Brasil, dediquei minha vida a lutar por justiça social e oportunidades iguais para todos. Acredite na força de quem já provou que é possível superar desafios e alcançar grandes conquistas. Junte-se a mim na construção de um Brasil mais justo e próspero para todos os brasileiros. Conheça a minha história e vamos, juntos, continuar transformando nosso país!</p>
-                    <a class="mainConteiner__section1__descricao__botao" href="">Saiba Mais!</a>
+            <div class="main__section1__imagem" >
+                <img class="main__section1__fotoLula" src="./img/foto lula 1(2).png" alt="">
             </div>
         </section>
     </main>
