--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="main__section1__descricao__button" href="">SAIBA MAIS</a>
             </div>
             <div class="main__section1__imagem" >
-                <img class="main__section1__fotoLula" src="./img/foto lula 1(2).png" alt="">
+                <img class="main__section1__fotoLula" src="./img/imagem.png" alt="">
             </div>
         </section>
     </main>
